agregando ajustes al responsive en las demas pages (contacto)

--- a/src/index.html
+++ b/src/index.html
@@ -41,17 +41,17 @@
                     </div>
                     
                     <li class="tabletXL:inline-block leading-[80px] tabletXL:mt-0 mt-[50px]">
-                        <a href="./pages/contacto.html" id="btnContacto" class="hover:dark:text-shadow cursor-pointer p-2 rounded-md transition duration-700 ease-in-out text-center bg-clip-text text-transparent bg-gradient-to-r from-pink-500 to-violet-500 font-black ">
+                        <a href="./pages/contacto.html" id="btnContactoNav" class="hover:dark:text-shadow cursor-pointer p-2 rounded-md transition duration-700 ease-in-out text-center bg-clip-text text-transparent bg-gradient-to-r from-pink-500 to-violet-500 font-black ">
                         CONTACTO
                         </a>
                     </li>
                     <li class="tabletXL:inline-block leading-[80px] tabletXL:mt-0 mt-[50px] hover:dark:text-shadow hover:dark:transition hover:dark:duration-700 hover:dark:ease-in-out">
-                        <a href="./pages/responsive.html" id="btnResposive" class="tabletXL:hover:bg-slate-500 p-2 rounded-md  transition duration-700 ease-in-out text-center bg-clip-text text-transparent bg-gradient-to-r from-pink-500 to-violet-500 font-black hover:dark:text-shadow">
+                        <a href="./pages/responsive.html" id="btnResposiveNav" class="tabletXL:hover:bg-slate-500 p-2 rounded-md  transition duration-700 ease-in-out text-center bg-clip-text text-transparent bg-gradient-to-r from-pink-500 to-violet-500 font-black hover:dark:text-shadow">
                         DISEÑO RESPONSIVO
                         </a>
                     </li>
                     <li class="tabletXL:inline-block leading-[80px] tabletXL:mt-0 mt-[50px]">
-                        <a href="./pages/navbar.html" id="btnNav" class="tabletXL:hover:bg-slate-500 p-2 rounded-md  transition duration-700 ease-in-out text-center bg-clip-text text-transparent bg-gradient-to-r from-pink-500 to-violet-500 font-black hover:dark:text-shadow hover:dark:transition hover:dark:duration-700 hover:dark:ease-in-out">
+                        <a href="./pages/navbar.html" id="btnNavNav" class="tabletXL:hover:bg-slate-500 p-2 rounded-md  transition duration-700 ease-in-out text-center bg-clip-text text-transparent bg-gradient-to-r from-pink-500 to-violet-500 font-black hover:dark:text-shadow hover:dark:transition hover:dark:duration-700 hover:dark:ease-in-out">
                         NAVEGACION
                         </a>
                     </li>
