--- a/src/pages/navbar.html
+++ b/src/pages/navbar.html
@@ -51,7 +51,7 @@
                 </div>
             </div>
         </nav>
-        <p id="titulo-navbars" class="text-center smartphone:text-2xl smartphoneRotate:text-5xl dark:text-slate-400">
+        <p id="titulo-navbars" class="text-center smartphone:text-2xl smartphoneRotate:text-5xl dark:text-slate-400 tablet:mt-20">
             EJEMPLOS DE BARRAS DE NAVEGACIÓN
         </p>
     </header>                   
