--- a/src/pages/contacto.html
+++ b/src/pages/contacto.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" class="scroll-smooth">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -117,21 +117,24 @@
             <p class="font-semi-bold dark:text-slate-300">© 2024 TAILWINDCSS PRACTICE</p>
             <p id="footerP" class="font-semi-bold dark:text-slate-300">Todos los derechos reservados.</p>
             <ul class="flex justify-center flex-wrap gap-5 pt-2 dark:text-white">
-                <li class="transition duration-300 ease-in-out hover:btn-shadow-black hover:dark:btn-shadow-white w-10 h-10 flex justify-center bg-black items-center dark:bg-slate-200 shadow-xl text-3xl text-azulFb rounded-lg">
+                <li class="transition duration-300 ease-in-out hover:btn-shadow-black hover:dark:btn-shadow-white w-10 h-10 flex justify-center bg-black items-center dark:bg-slate-200 shadow-md shadow-azulFb text-3xl text-azulFb rounded-lg">
                   <a href="#" class="iconos-a">
                     <i class="fab fa-facebook-f icon p-2"></i>    </a>
                 </li>
-                <li class="transition duration-300 hover:btn-shadow w-10 h-10 flex justify-center items-center bg-black dark:bg-white shadow-xl text-3xl mx-9 rounded-lg text-insta">
-                    <a href="#" class="iconos-a">
+                <li class="transition duration-300 hover:btn-shadow w-10 h-10 flex justify-center items-center bg-black dark:bg-white shadow-md shadow-insta text-3xl mx-9 rounded-lg text-insta">
+                    <a href="#" class="iconos-a ">
                     <i class="fab fa-instagram icon p-2"></i>
                     </a>
                 </li>
-                <li class="transition duration-300 hover:btn-shadow-blue w-10 h-10 flex justify-center items-center bg-linkaBg shadow-xl text-3xl rounded-lg text-linka">
+                <li class="transition duration-300 hover:btn-shadow-blue w-10 h-10 flex justify-center items-center bg-linkaBg shadow-md shadow-black text-3xl rounded-lg text-linka dark:shadow-azulFb">
                   <a href="#"><i class="fab fa-linkedin-in icon p-2"></i></a>
                 </li>
             </ul>
         </div>
     </footer>
+    <a class=" transition duration-300 hover:btn-shadow fixed left-4 bottom-4 text-center leading-10 rounded-full bg-gradient-to-r from-pink-500 to-violet-500 w-10 h-10 shadow-md shadow-black" href="#">
+        <i class="fa-solid fa-chevron-up"></i>
+    </a>
     
 </body>
 </html>
