--- a/src/pages/navbar.html
+++ b/src/pages/navbar.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" class="scroll-smooth">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -69,26 +69,25 @@
         </div>
         
     </main>
-    <footer>
+    <footer class="mt-14">
         <div class="text-center py-10">
             <p class="font-semi-bold dark:text-slate-300">© 2024 TAILWINDCSS PRACTICE</p>
             <p id="footerP" class="font-semi-bold dark:text-slate-300">Todos los derechos reservados.</p>
             <ul class="flex justify-center flex-wrap gap-5 pt-2 dark:text-white">
-                <li class="transition duration-300 hover:btn-shadow w-10 h-10 flex justify-center bg-black items-center dark:bg-slate-200 shadow-xl text-3xl text-azulFb rounded-lg">
-                  <a href="https://www.facebook.com/colo.soad.3/" target="_blank" class="iconos-a">
+                <li class="transition duration-300 ease-in-out hover:btn-shadow-black hover:dark:btn-shadow-white w-10 h-10 flex justify-center bg-black items-center dark:bg-slate-200 shadow-md shadow-azulFb text-3xl text-azulFb rounded-lg">
+                  <a href="#" class="iconos-a">
                     <i class="fab fa-facebook-f icon p-2"></i>    </a>
                 </li>
-                <li class="transition duration-300 hover:btn-shadow w-10 h-10 flex justify-center items-center bg-black dark:bg-white shadow-xl text-3xl mx-9 rounded-lg text-insta">
-                    <a href="https://www.instagram.com/colosoad/" target="_blank" class="iconos-a">
+                <li class="transition duration-300 hover:btn-shadow w-10 h-10 flex justify-center items-center bg-black dark:bg-white shadow-md shadow-insta text-3xl mx-9 rounded-lg text-insta">
+                    <a href="#" class="iconos-a ">
                     <i class="fab fa-instagram icon p-2"></i>
                     </a>
                 </li>
-                <li class="transition duration-300 hover:btn-shadow-blue w-10 h-10 flex justify-center items-center bg-linkaBg shadow-xl text-3xl rounded-lg text-linka">
+                <li class="transition duration-300 hover:btn-shadow-blue w-10 h-10 flex justify-center items-center bg-linkaBg shadow-md shadow-black text-3xl rounded-lg text-linka dark:shadow-azulFb">
                   <a href="#"><i class="fab fa-linkedin-in icon p-2"></i></a>
                 </li>
             </ul>
         </div>
     </footer>
-    
 </body>
 </html>
