--- a/src/pages/responsive.html
+++ b/src/pages/responsive.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" class="scroll-smooth">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,7 +24,7 @@
                         <svg xmlns="http://www.w3.org/2000/svg" width="42" height="42" viewBox="0 0 24 24" style="fill: #94a3b8"><path d="m16.192 6.344-4.243 4.242-4.242-4.242-1.414 1.414L10.535 12l-4.242 4.242 1.414 1.414 4.242-4.242 4.243 4.242 1.414-1.414L13.364 12l4.242-4.242z"></path></svg>
                     </i>
                 </label>
-                <ul class="fixed w-full h-screen bg-fucsiaCool top-20 -left-full tablet:static tablet:w-full tablet:h-20 tablet:-mt-[90px] tablet:text-center fhd:pl-8 tablet:bg-fucsiaCool tablet:block font-semibold text-center peer-checked:left-0 transition duration-1000 dark:ease-in-out dark:bg-black dark:transition dark:duration-1000 ease-in-out">                    
+                <ul class="fixed w-full h-screen smartphone:bg-fucsiaCool sm:bg-pink-950 md:bg-violet-950 lg:bg-slate-600 top-20 -left-full tablet:static tablet:w-full tablet:h-20 tablet:-mt-[90px] tablet:text-center fhd:pl-8 block font-semibold text-center peer-checked:left-0 transition duration-1000 dark:ease-in-out dark:bg-black dark:transition dark:duration-1000 ease-in-out">                    
                     <li class="tablet:inline-block leading-[80px] tablet:mt-0 mt-[50px] hover:dark:text-shadow hover:dark:transition hover:dark:duration-700 hover:dark:ease-in-out">
                         <a href="../index.html" id="btnResposiveNav" class="tablet:hover:bg-slate-500 p-2 rounded-md  transition duration-700 ease-in-out text-center bg-clip-text text-transparent bg-gradient-to-r from-pink-500 to-violet-500 font-black hover:dark:text-shadow tabletXL:text-2xl">
                         INICIO
@@ -191,20 +191,23 @@
             <p class="font-semi-bold dark:text-slate-300">© 2024 TAILWINDCSS PRACTICE</p>
             <p id="footerP" class="font-semi-bold dark:text-slate-300">Todos los derechos reservados.</p>
             <ul class="flex justify-center flex-wrap gap-5 pt-2 dark:text-white">
-                <li class="w-10 h-10 flex justify-center bg-black items-center dark:bg-slate-200 shadow-xl text-3xl text-azulFb rounded-lg">
-                  <a href="https://www.facebook.com/colo.soad.3/" target="_blank" class="iconos-a">
+                <li class="transition duration-300 ease-in-out hover:btn-shadow-black hover:dark:btn-shadow-white w-10 h-10 flex justify-center bg-black items-center dark:bg-slate-200 shadow-md shadow-azulFb text-3xl text-azulFb rounded-lg">
+                  <a href="#" class="iconos-a">
                     <i class="fab fa-facebook-f icon p-2"></i>    </a>
                 </li>
-                <li class="w-10 h-10 flex justify-center items-center bg-black dark:bg-white shadow-xl text-3xl mx-9 rounded-lg text-insta">
-                    <a href="https://www.instagram.com/colosoad/" target="_blank" class="iconos-a">
+                <li class="transition duration-300 hover:btn-shadow w-10 h-10 flex justify-center items-center bg-black dark:bg-white shadow-md shadow-insta text-3xl mx-9 rounded-lg text-insta">
+                    <a href="#" class="iconos-a ">
                     <i class="fab fa-instagram icon p-2"></i>
                     </a>
                 </li>
-                <li class="w-10 h-10 flex justify-center items-center bg-linkaBg shadow-xl text-3xl rounded-lg text-linka">
+                <li class="transition duration-300 hover:btn-shadow-blue w-10 h-10 flex justify-center items-center bg-linkaBg shadow-md shadow-black text-3xl rounded-lg text-linka dark:shadow-azulFb">
                   <a href="#"><i class="fab fa-linkedin-in icon p-2"></i></a>
                 </li>
             </ul>
         </div>
     </footer>
+    <a class=" transition duration-300 hover:btn-shadow fixed left-4 bottom-4 text-center leading-10 rounded-full bg-gradient-to-r from-pink-500 to-violet-500 w-10 h-10 shadow-md shadow-black" href="#">
+        <i class="fa-solid fa-chevron-up"></i>
+    </a>
 </body>
 </html>
