--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
         </nav>             
     </header>
     <main id="main" class="transition-opacity duration-500 opacity-100">
-        <div class="flex justify-center items-center h-50 w-screen text-center">
+        <div class="flex justify-center items-center text-center">
             <span id="tituloPrincipal" class="bg-clip-text text-transparent bg-gradient-to-r from-pink-500 to-violet-500 text-center text-5xl font-extrabold uppercase tracking-widest dark:text-shadow tablet:text-6xl pb-28 pt-20 tabletXL:text-7xl fhd:text-9xl fhd:mt-14">
                 Hola mundo!
             </span>
@@ -108,8 +108,8 @@
         <!-- </div> -->
 
 
-        <div class="overflow-hidden mt-14 rounded-lg w-full mx-auto h-200">
-            <div class="flex flex-row flex-nowrap sliderInner transition-all ease-in-out duration-1000 dark:btn-shadow h-200">
+        <div class="overflow-hidden mt-14 w-full mx-auto h-50">
+            <div class="flex h-full flex-row flex-nowrap sliderInner transition-all ease-in-out duration-1000 dark:btn-shadow ">
                 <!-- SLIDE 1 -->
                 <div id="btnContacto" class="slide1 w-full flex items-center justify-center bg-gradient-to-r from-pink-500 to-violet-500 text-3xl font-extrabold divSliders text-gray-900">
                     <h2 class="text-center w-full text-3xl font-extrabold text-gray-900">CONTACTO</h2>
