--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
     </header>
     <main id="main" class="transition-opacity duration-500 opacity-100">
         <div class="flex justify-center items-center text-center">
-            <span id="tituloPrincipal" class="bg-clip-text text-transparent bg-gradient-to-r from-pink-500 to-violet-500 text-center text-5xl font-extrabold uppercase tracking-widest dark:text-shadow tablet:text-6xl pb-28 pt-20 tabletXL:text-7xl fhd:text-9xl fhd:mt-14">
+            <span id="tituloPrincipal" class="bg-clip-text text-transparent bg-gradient-to-r from-pink-500 to-violet-500 text-center text-5xl font-extrabold uppercase tracking-widest dark:text-shadow tablet:text-6xl pb-28 pt-0 tabletXL:text-7xl fhd:text-9xl fhd:mt-14">
                 Hola mundo!
             </span>
         </div>        
@@ -108,19 +108,19 @@
         <!-- </div> -->
 
 
-        <div class="overflow-hidden mt-14 w-full mx-auto h-50">
+        <div class="overflow-hidden mt-14 w-full mx-auto h-72">
             <div class="flex h-full flex-row flex-nowrap sliderInner transition-all ease-in-out duration-1000 dark:btn-shadow ">
                 <!-- SLIDE 1 -->
-                <div id="btnContacto" class="slide1 w-full flex items-center justify-center bg-gradient-to-r from-pink-500 to-violet-500 text-3xl font-extrabold divSliders text-gray-900">
+                <div id="btnContacto" class="bg-gradient-to-br from-[#c058dd] via-[#f33095] to-[#8b5cf6] animate-bg slide1 w-full flex items-center justify-center text-3xl font-extrabold divSliders text-gray-900">
                     <h2 class="text-center w-full text-3xl font-extrabold text-gray-900">CONTACTO</h2>
                 </div>
                 
                 <!-- SLIDE 2 -->
-                <div id="btnResposive" class="slide2 w-full flex items-center justify-center bg-gradient-to-r from-violet-500 to-pink-500 text-3xl font-extrabold divSliders text-gray-900">
+                <div id="btnResposive" class="bg-gradient-to-br from-[#8b5cf6] via-[#f33095] to-[#c058dd] animate-bg slide2 w-full flex items-center justify-center text-3xl font-extrabold divSliders text-gray-900">
                     <p>DISEÑO RESPONSIVO</p>
                 </div>
                 <!-- SLIDE 3 -->
-                <div id="btnNav" class="slide3 w-full flex items-center justify-center bg-gradient-to-r from-pink-500 to-violet-500  divSliders text-3xl font-extrabold text-gray-900">
+                <div id="btnNav" class="bg-gradient-to-br from-[#c058dd] via-[#f33095] to-[#8b5cf6] animate-bg slide3 w-full flex items-center justify-center bg-gradient divSliders text-3xl font-extrabold text-gray-900">
                     <p>NAVEGACIÓN</p>
                 </div>
             </div>
@@ -160,9 +160,9 @@
         </div> -->
     <!-- </main> -->
     <footer>
-        <div class="text-center py-10">
-            <p class="font-semi-bold dark:text-slate-300">© 2024 TAILWINDCSS PRACTICE</p>
-            <p id="footerP" class="font-semi-bold dark:text-slate-300">Todos los derechos reservados.</p>
+        <div class="text-center pt-24 pb-10">
+            <p class="font-semi-bold text-slate-900 dark:text-slate-300 fhd:font-bold">© 2024 TAILWINDCSS PRACTICE</p>
+            <p id="footerP" class="font-semi-bold text-slate-900 dark:text-slate-300 fhd:font-bold">Todos los derechos reservados.</p>
             <ul class="flex justify-center flex-wrap gap-5 pt-2 dark:text-white">
                 <li class="transition duration-300 ease-in-out hover:btn-shadow-black hover:dark:btn-shadow-white w-10 h-10 flex justify-center bg-black items-center dark:bg-slate-200 shadow-md shadow-azulFb text-3xl text-azulFb rounded-lg">
                   <a href="#" class="iconos-a">
