--- a/src/pages/responsive.html
+++ b/src/pages/responsive.html
@@ -41,33 +41,15 @@
                         </a>
                     </li>
                 </ul>
-                <div class="hidden tablet:block" id="inicio">
+                <div class="block" id="inicio">
                     <a href="../index.html">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="120" height="120" viewBox="0 0 24 24" style="fill: rgba(164, 138, 247, 1)" class="h-[60px] w-[60px] ml-1 -mt-[72px]"><path d="M18.5 9.51a4.22 4.22 0 0 1-1.91-1.34A5.77 5.77 0 0 0 12 6a4.72 4.72 0 0 0-5 4 3.23 3.23 0 0 1 3.5-1.49 4.32 4.32 0 0 1 1.91 1.35A5.77 5.77 0 0 0 17 12a4.72 4.72 0 0 0 5-4 3.2 3.2 0 0 1-3.5 1.51zm-13 4.98a4.22 4.22 0 0 1 1.91 1.34A5.77 5.77 0 0 0 12 18a4.72 4.72 0 0 0 5-4 3.23 3.23 0 0 1-3.5 1.49 4.32 4.32 0 0 1-1.91-1.35A5.8 5.8 0 0 0 7 12a4.72 4.72 0 0 0-5 4 3.2 3.2 0 0 1 3.5-1.51z"></path></svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="120" height="120" viewBox="0 0 24 24" style="fill: rgba(164, 138, 247, 1)" class="h-[60px] w-[60px] tabletXL:ml-1 -mt-[80px] absolute right-4 tabletXL:-mt-[72px] tabletXL:static"><path d="M18.5 9.51a4.22 4.22 0 0 1-1.91-1.34A5.77 5.77 0 0 0 12 6a4.72 4.72 0 0 0-5 4 3.23 3.23 0 0 1 3.5-1.49 4.32 4.32 0 0 1 1.91 1.35A5.77 5.77 0 0 0 17 12a4.72 4.72 0 0 0 5-4 3.2 3.2 0 0 1-3.5 1.51zm-13 4.98a4.22 4.22 0 0 1 1.91 1.34A5.77 5.77 0 0 0 12 18a4.72 4.72 0 0 0 5-4 3.23 3.23 0 0 1-3.5 1.49 4.32 4.32 0 0 1-1.91-1.35A5.8 5.8 0 0 0 7 12a4.72 4.72 0 0 0-5 4 3.2 3.2 0 0 1 3.5-1.51z"></path></svg>
                         
                     </a>
                 </div>
             </div>
         </nav>
-    </header>
-    <!-- <a class="
-        fixed
-        left-4
-        top-4
-        text-center
-        leading-10
-        text-2xl
-        rounded-full 
-        bg-pink-700
-        w-10
-        h-10
-        hover:bg-slate-600 
-        border-slate-600 border-2
-        "
-        href="../index.html">
-            <i class="fa-solid fa-arrow-left"></i>
-    </a> -->
-    
+    </header>    
     <main id="main">
         <p id="tituloPrincipalDiseño" class="W-80 text-center smartphone:text-3xl smartphone:my-20 md:text-5xl dark:text-slate-400">
             Diseño Responsivo
