retoques, limpieza de codigo

--- a/src/index.html
+++ b/src/index.html
@@ -115,23 +115,23 @@
         <p class="text-center font-semi-bold text-slate-600 dark:text-slate-300">© 2024 TAILWINDCSS PRACTICE</p>
         <p id="footerP" class="text-center font-semi-bold text-slate-600 dark:text-slate-300">Todos los derechos reservados.</p>
         <div class="contenedor flex justify-center my-8">
-            <div class="boton dark:btn-shadow inline-block h-[60px] w-[60px] mx-1.25 overflow-hidden bg-white rounded-[50px] cursor-pointer shadow-custom transition-all duration-700 ease-out hover:w-50 hover:bg-[#d7e1ec] hover:text-[#fff]" id="icon-instagram">
+            <div class="boton dark:btn-shadow inline-block h-[60px] w-[60px] mx-1.25 overflow-hidden bg-white rounded-[50px] cursor-pointer shadow-custom transition-all duration-700 ease-out hover:w-50 hover:bg-[#ff7e64] hover:text-[#fff] dark:hover:bg-[#0a0d11]" id="icon-instagram">
                 <div class="icono inline-block h-[60px] w-[60px] rounded-[50px] box-border leading-[60px] text-center transition-all duration-700 ease-out hover:btn-shadow">
-                    <i class="fab fa-instagram text-[25px] mt-4 hover:mt-0 transition-all duration-700 ease-out" aria-hidden="true"></i>
+                    <i class="fab fa-instagram text-[25px] mt-4 transition-all duration-700 ease-out" aria-hidden="true"></i>
                 </div>
-                <span class="bg-clip-text text-transparent bg-gradient-to-r from-[#e74f31] via-[#d41356] to-[#3040e6] text-[16px] font-extrabold leading-[60px] ml-[10px]">Instagram</span>
+                <span class="bg-clip-text text-transparent bg-gradient-to-r from-[#e74f31] via-[#d41356] to-[#3040e6] text-[16px] font-black leading-[60px] ml-[10px]">Instagram</span>
             </div>
-            <div class="boton dark:btn-shadow inline-block h-[60px] w-[60px] mx-1.25 overflow-hidden bg-white rounded-[50px] cursor-pointer shadow-custom transition-all duration-700 ease-out hover:w-50 hover:bg-[#d7e1ec]" id="icon-linkedin">
+            <div class="boton dark:btn-shadow inline-block h-[60px] w-[60px] mx-1.25 overflow-hidden bg-white rounded-[50px] cursor-pointer shadow-custom transition-all duration-700 ease-out hover:w-50 hover:bg-[#accbec] dark:hover:bg-[#0a0d11]" id="icon-linkedin">
                 <div class="icono inline-block h-[60px] w-[60px] rounded-[50px] box-border leading-[60px] text-center transition-all duration-700 ease-out btn-shadow-blue">
-                    <i class="fab fa-linkedin" aria-hidden="true"></i>
+                    <i class="fab fa-linkedin text-[25px] mt-4 transition-all duration-700 ease-out" aria-hidden="true"></i>
                 </div>
-                <span class="text-[#306cb2] text-[16px] font-extrabold leading-[60px] ml-[10px]">LinkedIn</span>
+                <span class="text-[#306cb2] text-[16px] font-black leading-[60px] ml-[10px]">LinkedIn</span>
             </div>
-            <div class="boton dark:btn-shadow inline-block h-[60px] w-[60px] mx-1.25 overflow-hidden bg-white rounded-[50px] cursor-pointer shadow-custom transition-all duration-700 ease-out hover:w-50 hover:bg-[#d7e1ec]" id="icon-github">
+            <div class="boton dark:btn-shadow inline-block h-[60px] w-[60px] mx-1.25 overflow-hidden bg-white rounded-[50px] cursor-pointer shadow-custom transition-all duration-700 ease-out hover:w-50 hover:bg-[#909396] dark:hover:bg-[#0a0d11]" id="icon-github">
                 <div class="icono inline-block h-[60px] w-[60px] rounded-[50px] box-border leading-[60px] text-center transition-all duration-700 ease-out hover:btn-shadow-black">
-                    <i class="fab fa-github" aria-hidden="true"></i>
+                    <i class="fab fa-github text-[25px] mt-4 transition-all duration-700 ease-out" aria-hidden="true"></i>
                 </div>
-                <span  class="text-slate-900 text-[16px] font-extrabold leading-[60px] ml-[10px]">GitHub</span>
+                <span  class="text-slate-900 text-[16px] font-black leading-[60px] ml-[10px] dark:text-[#909396]">GitHub</span>
             </div>
         </div>
     </footer>
