--- a/src/pages/contacto.html
+++ b/src/pages/contacto.html
@@ -116,54 +116,26 @@
         <p class="text-center font-semi-bold text-slate-600 dark:text-slate-300">© 2024 TAILWINDCSS PRACTICE</p>
         <p id="footerP" class="text-center font-semi-bold text-slate-600 dark:text-slate-300">Todos los derechos reservados.</p>
         <div class="contenedor flex justify-center my-8">
-            <div class="boton dark:btn-shadow inline-block h-[60px] w-[60px] mx-1.25 overflow-hidden bg-white rounded-[50px] cursor-pointer shadow-custom transition-all duration-700 ease-out hover:w-50 hover:bg-[#d7e1ec] hover:text-[#fff]" id="icon-instagram">
+            <div class="boton dark:btn-shadow inline-block h-[60px] w-[60px] mx-1.25 overflow-hidden bg-white rounded-[50px] cursor-pointer shadow-custom transition-all duration-700 ease-out hover:w-50 hover:bg-[#ff7e64] hover:text-[#fff] dark:hover:bg-[#0a0d11]" id="icon-instagram">
                 <div class="icono inline-block h-[60px] w-[60px] rounded-[50px] box-border leading-[60px] text-center transition-all duration-700 ease-out hover:btn-shadow">
-                    <i class="fab fa-instagram text-[25px]" aria-hidden="true"></i>
+                    <i class="fab fa-instagram text-[25px] mt-4 transition-all duration-700 ease-out" aria-hidden="true"></i>
                 </div>
-                <span class="bg-clip-text text-transparent bg-gradient-to-r from-[#e74f31] via-[#d41356] to-[#3040e6] text-[16px] font-extrabold leading-[60px] ml-[10px]">
-                    Instagram
-                </span>
+                <span class="bg-clip-text text-transparent bg-gradient-to-r from-[#e74f31] via-[#d41356] to-[#3040e6] text-[16px] font-black leading-[60px] ml-[10px]">Instagram</span>
             </div>
-
-            <div class="boton dark:btn-shadow inline-block h-[60px] w-[60px] mx-1.25 overflow-hidden bg-white rounded-[50px] cursor-pointer shadow-custom transition-all duration-700 ease-out hover:w-50 hover:bg-[#d7e1ec]" id="icon-linkedin">
+            <div class="boton dark:btn-shadow inline-block h-[60px] w-[60px] mx-1.25 overflow-hidden bg-white rounded-[50px] cursor-pointer shadow-custom transition-all duration-700 ease-out hover:w-50 hover:bg-[#accbec] dark:hover:bg-[#0a0d11]" id="icon-linkedin">
                 <div class="icono inline-block h-[60px] w-[60px] rounded-[50px] box-border leading-[60px] text-center transition-all duration-700 ease-out btn-shadow-blue">
-                    <i class="fab fa-linkedin text-[25px]" aria-hidden="true"></i>
+                    <i class="fab fa-linkedin text-[25px] mt-4 transition-all duration-700 ease-out" aria-hidden="true"></i>
                 </div>
-                <span class="text-[#306cb2] text-[16px] font-extrabold leading-[60px] ml-[10px]">
-                    LinkedIn
-                </span>
+                <span class="text-[#306cb2] text-[16px] font-black leading-[60px] ml-[10px]">LinkedIn</span>
             </div>
-
-            <div class="boton dark:btn-shadow inline-block h-[60px] w-[60px] mx-1.25 overflow-hidden bg-white rounded-[50px] cursor-pointer shadow-custom transition-all duration-700 ease-out hover:w-50 hover:bg-[#d7e1ec]" id="icon-github">
+            <div class="boton dark:btn-shadow inline-block h-[60px] w-[60px] mx-1.25 overflow-hidden bg-white rounded-[50px] cursor-pointer shadow-custom transition-all duration-700 ease-out hover:w-50 hover:bg-[#909396] dark:hover:bg-[#0a0d11]" id="icon-github">
                 <div class="icono inline-block h-[60px] w-[60px] rounded-[50px] box-border leading-[60px] text-center transition-all duration-700 ease-out hover:btn-shadow-black">
-                    <i class="fab fa-github text-[25px]" aria-hidden="true"></i>
+                    <i class="fab fa-github text-[25px] mt-4 transition-all duration-700 ease-out" aria-hidden="true"></i>
                 </div>
-                <span  class="text-slate-900 text-[16px] font-extrabold leading-[60px] ml-[10px]">
-                    GitHub
-                </span>
+                <span  class="text-slate-900 text-[16px] font-black leading-[60px] ml-[10px] dark:text-[#909396]">GitHub</span>
             </div>
         </div>
     </footer>
-    <!-- <footer>
-        <div class="text-center py-10">
-            <p class="font-semi-bold dark:text-slate-300">© 2024 TAILWINDCSS PRACTICE</p>
-            <p id="footerP" class="font-semi-bold dark:text-slate-300">Todos los derechos reservados.</p>
-            <ul class="flex justify-center flex-wrap gap-5 pt-2 dark:text-white">
-                <li class="transition duration-300 ease-in-out hover:btn-shadow-black hover:dark:btn-shadow-white w-10 h-10 flex justify-center bg-black items-center dark:bg-slate-200 shadow-md shadow-azulFb text-3xl text-azulFb rounded-lg">
-                  <a href="#" class="iconos-a">
-                    <i class="fab fa-facebook-f icon p-2"></i>    </a>
-                </li>
-                <li class="transition duration-300 hover:btn-shadow w-10 h-10 flex justify-center items-center bg-black dark:bg-white shadow-md shadow-insta text-3xl mx-9 rounded-lg text-insta">
-                    <a href="#" class="iconos-a ">
-                    <i class="fab fa-instagram icon p-2"></i>
-                    </a>
-                </li>
-                <li class="transition duration-300 hover:btn-shadow-blue w-10 h-10 flex justify-center items-center bg-linkaBg shadow-md shadow-black text-3xl rounded-lg text-linka dark:shadow-azulFb">
-                  <a href="#"><i class="fab fa-linkedin-in icon p-2"></i></a>
-                </li>
-            </ul>
-        </div>
-    </footer> -->
     <a class=" transition duration-300 hover:btn-shadow fixed left-4 bottom-4 text-center leading-10 rounded-full bg-gradient-to-r from-pink-500 to-violet-500 w-10 h-10 shadow-md shadow-black" href="#">
         <i class="fa-solid fa-chevron-up"></i>
     </a>
