--- a/src/pages/navbar1.html
+++ b/src/pages/navbar1.html
@@ -31,7 +31,7 @@
                     <ul class="fixed w-full h-screen bg-[#2A3A47] top-20 -left-full navbarHidden:static navbarHidden:w-full navbarHidden:h-20 navbarHidden:top-0 navbarHidden:float-right navbarHidden:pl-6 tabletXL:pl-8 navbarHidden:bg-[#2A3A47] navbarHidden:block font-semibold text-center  navbarHidden:text-left transition-all duration-700 ease-in-out peer-checked:left-0">
                 
                         <li class="navbarHidden:inline-block leading-[80px] navbarHidden:mt-0 mt-[50px] mr-0 tablet:mr-4">
-                            <a href="#" class="navbarHidden:bg-slate-500 
+                            <a href="../index.html" class="navbarHidden:bg-slate-500 
                             navbarHidden:p-2 navbarHidden:rounded-md hover:text-white fhd:font-semibold font text-[16px] tablet:text[18px]transition duration-700 ease-in-out nav-button">
                             INICIO
                             </a>
