--- a/src/pages/navbar2.html
+++ b/src/pages/navbar2.html
@@ -4,14 +4,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="../output.css" rel="stylesheet">
-        <link href="../css/prueba.css" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="icon" type="icono" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTeKPw4CK4jcH7udsFHZdiB3iIOuI3fUCsxUZosXy4Y1yd25NA-dzCBPrSDIhg1BwObl3w&usqp=CAU" />
         <script defer src="../js/navbar2.js"></script>
         <title>NAVBAR 2</title>
     </head>
     <body class="bg-slate-600 box-border p-0 m-0 duration-1000 ease-in-out scroll-smooth">
-        <header class="flex items-center">
+        <header class="flex items-center h-20">
             <nav class="pl-6">
               <input type="checkbox" id="btnOpenModal" class="hidden peer" />
               <label for="btnOpenModal" class="navbarHidden:hidden peer-checked:hidden">
@@ -25,7 +24,7 @@
                   </div>                  
                   <ul>                
                     <li class="leading-[80px] mt-[50px] mr-0">
-                        <a href="#" class="outline-none hover:text-white font text-[14px] duration-300 ">
+                        <a href="../index.html" class="outline-none hover:text-white font text-[14px] duration-300 ">
                             INICIO
                         </a>
                     </li>
@@ -41,9 +40,9 @@
                     </li>
                   </ul>
                 </dialog>
-                <ul class="navbarHidden:w-full navbarHidden:h-20 hidden navbarHidden:top-0 navbarHidden:float-right navbarHidden:pl-6 tabletXL:pl-8 navbarHidden:bg-[#2A3A47] navbarHidden:block font-semibold text-center  navbarHidden:text-left">
+                <ul class="navbarHidden:w-full navbarHidden:h-20 hidden navbarHidden:top-0 navbarHidden:float-right navbarHidden:pl-6 tabletXL:pl-8 navbarHidden:block font-semibold text-center  navbarHidden:text-left">
                   <li class="navbarHidden:inline-block leading-[80px] navbarHidden:mt-0 mt-[50px] mr-0 tablet:mr-4">
-                    <a href="#" class="navbarHidden:bg-slate-500 navbarHidden:p-2 navbarHidden:rounded-md hover:text-white fhd:font-semibold font text-[14px] tablet:text[18px]">
+                    <a href="../index.html" class="navbarHidden:bg-slate-500 navbarHidden:p-2 navbarHidden:rounded-md hover:text-white fhd:font-semibold font text-[14px] tablet:text[18px]">
                       INICIO
                   </a>
                   </li>
@@ -65,6 +64,6 @@
               </a>
               </nav>
         </header>
-        <section class=" h-calc bg-[url('https://images3.alphacoders.com/130/1308690.jpg')] bg-no-repeat bg-cover bg-center"></section>
+        <section class=" h-calc bg-[url('https://images3.alphacoders.com/130/1308690.jpg')] bg-no-repeat bg-cover bg-center  tabletXL:bg-top"></section>
     </body>
 </html>
